--- a/BE/Presentation/appsettings.json
+++ b/BE/Presentation/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+   "Jwt": {
+    "Key": "a_very_long_secret_key_for_jwt_at_least_32_bytes",
+    "Issuer": "AskMart",
+    "Audience": "AskMartUsers"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=App.db"
+  }
 }
