--- a/Authentication/angular.json
+++ b/Authentication/angular.json
@@ -78,7 +78,8 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "public",
+                "output": "/"
               }
             ],
             "styles": [
