user can put products in its cart

--- a/Home_page/angular.json
+++ b/Home_page/angular.json
@@ -22,7 +22,7 @@
               {
                 "glob": "**/*",
                 "input": "public",
-                "src/assets"
+                "output": "src/assets"
               }
             ],
             "styles": [
@@ -80,8 +80,7 @@
               {
                 "glob": "**/*",
                 "input": "public",
-                    "output": "/"
-
+                "output": "/"
               }
             ],
             "styles": [
